[gd_scene load_steps=13 format=3 uid="uid://raesadnfh01o"]

[ext_resource type="Script" path="res://Scenes and Scripts/Dialog/Tutorial Dialoge/dialog_tutorial.gd" id="1_0ewjj"]
[ext_resource type="Texture2D" uid="uid://b2gxkqhejx0ar" path="res://Assets/Art/UI/Buttons/Weiter Button/weiter_button.png" id="2_03wpg"]
[ext_resource type="Texture2D" uid="uid://cnty107xvtuqv" path="res://Assets/Art/UI/Buttons/Weiter Button/weiter_button_dark.png" id="3_i6odk"]
[ext_resource type="Texture2D" uid="uid://ct3w6scrg08y8" path="res://Assets/Art/UI/Buttons/Weiter Button/weiter_button_light.png" id="4_uwlos"]
[ext_resource type="AudioStream" uid="uid://c0au4soqh3llb" path="res://Assets/Sound/SFX/UI/Hover/sfx_hub_ui_hover_var1.mp3" id="5_skydk"]
[ext_resource type="AudioStream" uid="uid://ccy6mhwriygjc" path="res://Assets/Sound/SFX/UI/Hover/sfx_hub_ui_hover_var3.mp3" id="6_45y4a"]
[ext_resource type="AudioStream" uid="uid://c8hfjs6trma73" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var1.mp3" id="7_g2eoj"]
[ext_resource type="AudioStream" uid="uid://2rj1ayk1kdtp" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var2.mp3" id="8_vethb"]
[ext_resource type="AudioStream" uid="uid://bag4e5o0pn42r" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var3.mp3" id="9_h5nq8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_db4xi"]
size = Vector2(352, 263)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i855d"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("5_skydk")
stream_0/weight = 1.0
stream_1/stream = ExtResource("6_45y4a")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xd5t4"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("7_g2eoj")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_vethb")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_h5nq8")
stream_2/weight = 1.0

[node name="DialogTutorial" type="CanvasLayer"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(298, 697.5)
shape = SubResource("RectangleShape2D_db4xi")

[node name="DialogBox" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0ewjj")

[node name="SkipButton" type="TextureButton" parent="DialogBox"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 728.0
offset_top = 912.0
offset_right = -272.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_03wpg")
texture_pressed = ExtResource("3_i6odk")
texture_hover = ExtResource("4_uwlos")

[node name="SkipButtonTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Voice Over" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
bus = &"Dialogue"

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_i855d")
volume_db = -15.0
bus = &"SFX"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_xd5t4")
volume_db = -18.0
bus = &"SFX"

[connection signal="mouse_entered" from="Area2D" to="DialogBox" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="DialogBox" method="_on_area_2d_mouse_exited"]
[connection signal="button_down" from="DialogBox/SkipButton" to="DialogBox" method="_on_skip_button_button_down"]
[connection signal="mouse_entered" from="DialogBox/SkipButton" to="DialogBox" method="_on_skip_button_mouse_entered"]
[connection signal="pressed" from="DialogBox/SkipButton" to="DialogBox" method="_on_skip_button_pressed"]
[connection signal="timeout" from="SkipButtonTimer" to="DialogBox" method="_on_skip_button_timer_timeout"]
